# ReasonableCMakeForCXX

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.bash
cmake/: reason.cmake
project1/: CMakeLists.txt
project1-integrate_reason_with_old_project/: CMakeLists.txt
project1/dependencies/module1/: CMakeLists.txt
project1/dependencies/module2/: CMakeLists.txt
project1/dependencies/module3/: CMakeLists.txt
project1/show_help/: CMakeLists.txt
project1/src/: the_main2.cpp
project2/: CMakeLists.txt
project2-depend_on_other_reason_project/: CMakeLists.txt
project2/src/: main.cpp
project2/test/: test1_project2.cpp
project3/: CMakeLists.txt
project3-rewrite_project1_with_reason/: CMakeLists.txt
project3-rewrite_project1_with_reason/include/main1/: the_main1.hpp
project3-rewrite_project1_with_reason/include/main2/: the_main2.hpp
project3-rewrite_project1_with_reason/src/: main.cpp
project3/dependencies/module1/: CMakeLists.txt
project3/dependencies/module1/src/: m1.cpp
project3/dependencies/module2/: CMakeLists.txt
project3/dependencies/module2/include/module2/: m2.hpp
project3/dependencies/module2/src/: main1.cpp
project3/dependencies/module3/test/: test2_m2.cpp
project3/src/: the_main1.cpp
project4-header_only_library/: CMakeLists.txt
project4-header_only_library/module1/include/module1/: foo.hpp
project4-interface-libraries/: CMakeLists.txt
project4-interface-libraries/module1/: CMakeLists.txt
project4-interface-libraries/src/: main.cpp
project5-multi-exe-dep-on-common-lib/: CMakeLists.txt
project5-multi-exe-dep-on-common-lib/test/: test1_project5.cpp
project5-multi_exe_dep_on_common_lib/: CMakeLists.txt
project5-multi_exe_dep_on_common_lib/include/main1/: the_main1.hpp
project5-multi_exe_dep_on_common_lib/include/main2/: the_main2.hpp
project5-multi_exe_dep_on_common_lib/src/: the_main1.cpp  the_main2.cpp
project6-cuda_example/: CMakeLists.txt
project6-cuda_example/include/project6/: cuda_util.hpp
project6-cuda_example/src/: cuda_util.cu  vec_add.cu
project7-glfw_example/: CMakeLists.txt
show_help/: CMakeLists.txt
